<resources>
    <string name="app_name">Booking Tour</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="swipe_left_for_register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="Travel">Travel</string>
    <string name="Easy">Easy</string>
    <string name="Convenient">Convenient</string>
    <string name="payment">Payment</string>
    <string name="BookingTour">Booking Tour</string>
    <string name="TimeToTravel">Time To Travel</string>

    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>


    <string name="title_activity_login">Đăng nhập</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="welcome">"Chào mừng !"</string>
    <string name="invalid_username">Không phải là username hợp lệ</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Đăng nhập thất bại"</string>
    <string name="login_email_hint">Email</string>
    <string name="login_username_hint">Tên đăng nhập</string>
    <string name="login_password_hint">Mật khẩu</string>
    <string name="signup_login_hint">Đã có tài khoản ? Đăng nhập ngay.</string>
    <string name="login_signup_hint">Chưa có tài khoản ? Đăng ký ngay.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_user">Người dùng</string>
    <string name="title_notifications">Thông báo</string>
    <string name="title_explorer">Explorer</string>
    <string name="facebook_app_id">2390005314662020</string>
    <string name="fb_login_protocol_scheme">fb2390005314662020</string>
    <string name="pay">Pay</string>
</resources>