<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginParent"
    android:orientation="vertical"
    tools:context=".ui.auth.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:weightSum="12">

        <LinearLayout
            style="@style/parent"
            android:layout_weight="3"
            android:background="@drawable/login_shape_bk"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="15dp"
                android:fontFamily="@font/indigo_daisy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Register"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <ImageView
                style="@style/parent"
                android:layout_height="300dp"
                android:background="@drawable/ic_login_bk"
                android:contentDescription="login background"
                android:scaleType="centerCrop" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="150dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_bottom"
            android:orientation="vertical">

            <TextView
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:id="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/indigo_daisy"
                android:text="@string/BookingTour"
                android:textSize="50sp" />

            <TextView
                android:layout_marginLeft="15dp"
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/tag"
                android:textSize="17sp" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <EditText
                android:id="@+id/et_name"
                style="@style/viewParent"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_email"
                style="@style/viewParent"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_password"
                style="@style/viewParent"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_repassword"
                style="@style/viewParent"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/re_type_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="15sp" />
            <Button
                android:layout_marginTop="15dp"
                android:id="@+id/btn_register"
                style="@style/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/register"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_above="@id/swipeLeft"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                android:layout_gravity="center"
                android:id="@+id/swipeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/swipe_right_for_login"
                android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

</RelativeLayout>